--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,26 @@ html{
     scroll-behavior: smooth;
 }
 
+section{
+    padding: 2rem 9%;
+}
+section:nth-child(even){
+    background: #eee;
+}
+.btn{
+    margin-top: 1rem;
+    display: inline-block;
+    font-size: 1.7rem;
+    color: #fff;
+    background: var(--balck);
+    border-radius: .5rem;
+    cursor: pointer;
+    padding: .8rem 3rem;
+}
+.btn:hover{
+    background: var(--green);
+    letter-spacing: .1rem;
+}
 header{
     position: fixed;
     top: 0;
@@ -82,14 +102,79 @@ header .icons a:hover{
 header .icons #menu-bars{
     display: none;
 }
-
-
-
-
-
-
-
-
+#search-form{
+    position: fixed;
+    top: -110%; left: 0;
+    height: 100%; width: 100%;
+    z-index: 1004;
+    background: rgba(0,0,0,.6);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 1rem;
+}
+#search-form.active{
+    top: 0;
+}
+#search-form #search-box{
+    width: 50rem;
+    border-bottom: .1rem solid #fff;
+    padding: 1rem 0;
+    color: #fff;
+    font-size: 3rem;
+    text-transform: none;
+    background: none;
+}
+#search-form #search-box::placeholder{
+    color: #eee;
+}
+#search-form #search-box::-webkit-search-cancel-button{
+    -webkit-appearance: none;
+}
+#search-form label{
+    color: #fff;
+    cursor: pointer;
+    font-size: 3rem;
+}
+#search-form label:hover{
+    color: var(--green);
+}
+#search-form #close{
+    position: absolute;
+    color: #fff;
+    cursor: pointer;
+    top: 2rem; right: 3rem;
+    font-size: 5rem;
+}
+.home .home-slider .slider{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    padding-top: 9rem;
+}
+.home .home-slider .slider .content{
+    flex: 1 1 45rem;
+}
+.home .home-slider .slider .image{
+    flex: 1 1 45rem;
+}
+.home .home-slider .slider .image img{
+    width: 100%;
+}
+.home .home-slider .slider .content span{
+    color: var(--green);
+    font-size: 2.5rem;
+}
+.home .home-slider .slider .content h3{
+    color: var(--balck);
+    font-size: 7rem;
+}
+.home .home-slider .slider .content p{
+    color: var(--light-color);
+    font-size: 2.2rem;
+    padding: .5rem 0;
+    line-height: 1.5;
+}
 
 
 
@@ -123,6 +208,10 @@ header .icons #menu-bars{
         border-top: .1rem solid rgba(0,0,0,.2);
         border-bottom: .1rem solid rgba(0,0,0,.2);
         padding: 1rem;
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    }
+    header .navbar.active{
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
     }
     header .navbar a{
         display: block;
@@ -130,5 +219,9 @@ header .icons #menu-bars{
         margin: 1rem;
         font-size: 2rem;
         background: #eee;
+    }
+    #search-form #search-box{
+        width: 90%;
+        margin: 0 1rem;
     }
 }
