--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,19 @@ section{
 section:nth-child(even){
     background: #eee;
 }
+.sub-heading{
+    text-align: center;
+    color: var(--green);
+    font-size: 2rem;
+    padding-top: 1rem;
+}
+.heading{
+    text-align: center;
+    color: var(--balck);
+    font-size: 3rem;
+    padding-bottom: 2rem;
+    text-transform: uppercase;
+}
 .btn{
     margin-top: 1rem;
     display: inline-block;
@@ -176,6 +189,82 @@ header .icons #menu-bars{
     line-height: 1.5;
 }
 
+.swiper-pagination-buttet-active{
+    background: var(--green);
+}
+
+.dishes .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(28rem, 1fr));
+    gap: 1.5rem;
+}
+.dishes .box-container .box{
+    padding: 2.5rem;
+    background: #fff;
+    border-radius: .5rem;
+    border: .1rem solid rgba(0, 0, 0, .2);
+    box-shadow: var(--box-shdow);
+    position: relative;
+    overflow: hidden;
+    text-align: center;
+}
+.dishes .box-container .box .fa-heart,
+.dishes .box-container .box .fa-eye{
+    position: absolute;
+    top: 1.5rem;
+    background: #eee;
+    border-radius: 50%;
+    height: 5rem;
+    width: 5rem;
+    line-height: 5rem;
+    font-size: 2rem;
+    color: var(--balck);
+}
+.dishes .box-container .box .fa-heart:hover,
+.dishes .box-container .box .fa-eye:hover{
+    background: var(--green);
+    color: #fff;
+}
+.dishes .box-container .box .fa-heart{
+    right: -15rem;
+}
+.dishes .box-container .box .fa-eye{
+    left: -15rem;
+}
+.dishes .box-container .box:hover .fa-heart{
+    right: 1.5rem;
+}
+.dishes .box-container .box:hover .fa-eye{
+    left: 1.5rem;
+}
+.dishes .box-container .box img{
+    height: 17rem;
+    margin: 1rem 0;
+}
+.dishes .box-container .box h3{
+    color: var(--balck);
+    font-size: 2.5rem;
+}
+.dishes .box-container .box .stars{
+    padding: 1rem 0;
+}
+.dishes .box-container .box .stars i{
+    font-size: 1.7rem;
+    color: var(--green);
+}
+.dishes .box-container .box span{
+    color: var(--green);
+    font-weight: bolder;
+    margin-right: 1rem;
+    font-size: 2.5rem;
+}
+
+
+
+
+
+
+
 
 
 
@@ -190,10 +279,17 @@ header .icons #menu-bars{
 /* media queries */
 @media(max-width:991px){
     html{
-        font-size: 55%;
+        font-size: 50%;
+    }
+    .dishes .box-container .box img{
+        height: auto;
+        width: 100%;;
     }
     header{
         padding: 1rem 2rem;
+    }
+    section{
+        padding: 2rem;
     }
 }
 
@@ -222,6 +318,9 @@ header .icons #menu-bars{
     }
     #search-form #search-box{
         width: 90%;
-        margin: 0 1rem;
+        margin: 0 1rem;    
+    }
+    .home .home-slider .slider .content h3{
+        font-size: 5rem;
     }
 }
