--- a/css/style.css
+++ b/css/style.css
@@ -416,9 +416,51 @@ header .icons #menu-bars{
     line-height: 1.8;
     color: var(--light-color);
 }
-
-
-
+.order form{
+    max-width: 90rem;
+    border-radius: .5rem;
+    box-shadow: var(--box-shdow);
+    border-radius: .1rem solid rgba(0,0,0,.2);
+    background: #fff;
+    padding: 1.5rem;
+    margin: 0 auto;
+}
+.order form .inputBox{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.order form .inputBox .input{
+    width: 49%;
+}
+.order form .inputBox .input span{
+    display: block;
+    padding: .5rem 0;
+    font-size: 1.5rem;
+    color: var(--light-color);
+}
+.order form .inputBox .input input,
+.order form .inputBox .input textarea{
+    background: #eee;
+    border-radius: .5rem;
+    padding: 1rem;
+    font-size: 1.6rem;
+    color: var(--balck);
+    text-transform: none;
+    margin-bottom: 1rem;
+    width: 100%;
+}
+.order form .inputBox .input input:focus,
+.order form .inputBox .input textarea:focus{
+    border: .1rem solid var(--green);
+}
+.order form .inputBox .input textarea{
+    height: 20rem;
+    resize: none;
+}
+.order form .btn{
+    margin-top: 0;
+}
 
 
 
@@ -448,10 +490,7 @@ header .icons #menu-bars{
     html{
         font-size: 50%;
     }
-    .dishes .box-container .box img{
-        height: auto;
-        width: 100%;;
-    }
+   
     header{
         padding: 1rem 2rem;
     }
@@ -489,5 +528,18 @@ header .icons #menu-bars{
     }
     .home .home-slider .slider .content h3{
         font-size: 5rem;
+    }
+
+}
+@media(max-width:450px){
+    html{
+        font-size: 50%;
+    }
+    .dishes .box-container .box img{
+        height: auto;
+        width: 100%;
+    }
+    .order form .inputBox .input{
+        width: 100%;
     }
 }
